fix: 프로젝트 서비스 수정