@@ -10,9 +10,11 @@ import com.evenly.evenide.repository.ProjectRepository;
 import com.evenly.evenide.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.method.P;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,11 +23,12 @@ public class ProjectService {
     private final ProjectRepository projectRepository;
     private final UserRepository userRepository;
 
-    public ProjectResponse createProject(ProjectRequestDto requestDto, String email, Long ownerId) {
+    //로그인 사용자 프로젝트 생성
+    public ProjectResponse createProject(ProjectRequestDto requestDto, String email) {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
-        if (!user.getId().equals(ownerId)) {
+        if (!user.getId().equals(requestDto.getOwnerId())) {
             throw new CustomException(ErrorCode.PROJECT_OWNER_NOT_YOU);
         }
 
@@ -38,16 +41,30 @@ public class ProjectService {
         return new ProjectResponse(saved, user.getId());
     }
 
+    //기본 프로젝트 생성 - 비로그인 전용
+    // 추후 추가
+
+    // 내 전체 프로젝트 조회 (사이드바용)
     @Transactional
-    public List<ProjectResponse> getProjects(String email) {
-        User owner = userRepository.findByEmail(email)
+    public List<ProjectResponse> getMyProjects(String email) {
+        User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
-        return projectRepository.findAllByOwner(owner).stream()
-                .map(p -> new ProjectResponse(p, owner.getId()))
-                .toList();
+        return projectRepository.findAllByOwner(user).stream()
+                .map(p -> new ProjectResponse(p, user.getId()))
+                .collect(Collectors.toList());
     }
 
+    // 공유 링크 단건 조회
+    @Transactional
+    public ProjectResponse getSharedProject(String token, Long currentUserId) {
+        Project project = projectRepository.findByShareToken(token)
+                .orElseThrow(() -> new CustomException(ErrorCode.PROJECT_NOT_FOUND));
+
+        return new ProjectResponse(project, currentUserId);
+    }
+
+    // 이름 수정
     public ProjectResponse updateProject(Long id, ProjectRequestDto requestDto, Long userId) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.PROJECT_NOT_FOUND));
@@ -60,6 +77,7 @@ public class ProjectService {
         return new ProjectResponse(project, userId);
     }
 
+    // 삭제
     public void deleteProject(Long id, Long userId) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.PROJECT_NOT_FOUND));
@@ -67,6 +85,7 @@ public class ProjectService {
         if (!project.getOwner().getId().equals(userId)) {
             throw new CustomException(ErrorCode.PROJECT_OWNER_NOT_YOU);
         }
-        projectRepository.deleteById(id);
+
+        projectRepository.delete(project);
     }
 }
